styles/notion.css
/**
 * This file contains site-specifc style overrides for Notion elements from
 * react-notion-x.
 *
 * react-notion-x's goal is to match styling as close as possible to Notion,
 * whereas our goal with this site is to adjust Notion's styling in a few key
 * places to add some flare.
 */

.notion {
  --notion-max-width: 800px;
  --notion-header-height: 54px;
  padding: 0 8px;
}

.notion-page {
  padding-bottom: calc(max(5vh, 32px)) !important;
  line-height: 1.65;
}

.index-page {
  --notion-max-width: 800px;
}

.notion-page-content-inner {
  z-index: 1;
}

.notion-text {
  padding: 0.5em 2px;
}

.dark-mode .notion-text {
  opacity: 0.7;
}

.notion-asset-caption {
  text-align: center;
}

.notion-asset-wrapper {
  margin-top: 1em;
  margin-bottom: 1em;
}

.notion-collection {
  max-width: 100%;
}

img.notion-page-icon, svg.notion-page-icon {
  display: none;
}

/* <-- Fix embedded video's size overflows its container */
.notion-asset-wrapper-video > div,
.notion-asset-wrapper-video video {
  width: 100% !important;
}
/* Fix embedded video's size overflows its container --> */

.notion-header .nav-header {
  max-width: 800px;
  height: 64px;
  margin: 0 auto;
  background-color: transparent;
}

.notion-gallery-grid {
  grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
  grid-gap: 4vmin;
  gap: 2vmin;
  z-index: 1;
}

.notion-gallery-grid .notion-page-icon {
  display: none;
}

.notion-gallery-grid .notion-page-title-text {
  font-size: 18px;
  font-weight: 600;
  white-space: unset;
}

.notion-gallery-grid .notion-collection-card-property {
  white-space: unset;
  text-overflow: unset;
}

.notion-gallery-grid .notion-property-text {
  font-size: 14px;
  color: #4b5563;
}

.dark-mode .notion-gallery-grid .notion-property-text {
  color: #ffffff90;
}

.notion-list-item {
  margin-bottom: 8px;
  z-index: 10;
}

.notion-list-item .notion-page-link:hover {
  background: none;
}

.notion-collection-card-cover img {
  border-radius: 12px;
}

.notion-collection-card {
  overflow: visible;
}

.notion-collection-card-cover {
  border-radius: 12px;
  overflow: visible;
}

.notion-collection-card-cover {
  border-bottom: 0 none;
  transition: filter 150ms linear;
  filter: none;
}

.notion-collection-card:hover .notion-collection-card-cover {
  filter: brightness(120%);
}

/* only target safari */
@media screen and (-webkit-min-device-pixel-ratio: 0) {
  _::-webkit-full-page-media,
  _:future,
  :root,
  .notion-collection-card-cover {
    transition: none 0ms linear;
  }
}

.notion-quote {
  padding: 0.2em 0.75em;
  font-size: 1.1em;
}

.notion-h1,
.notion-h2,
.notion-h3 {
  margin-bottom: 0.25em;
}

.notion-callout {
  margin: 0.75em 0;
}

.notion-hr {
  margin: 0.5em 0;
}

@media only screen and (max-width: 920px) {
  .index-page.notion-page {
    padding-left: 2vw;
    padding-right: 2vw;
  }
}

@media only screen and (max-width: 720px) {
  .notion-page {
    padding-left: 2vw;
    padding-right: 2vw;
  }
}

@media only screen and (max-width: 600px) {
  .notion-search-button {
    display: none !important;
  }
}

@media only screen and (max-width: 400px) {
  .notion-gallery-grid {
    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
    grid-gap: 4vmin;
    gap: 4vmin;
  }  
}

.notion .notion-page-icon-cover {
  margin-left: auto;
  margin-right: auto;
}

.notion-title {
  display: block;
  text-align: left;
  margin-bottom: 0px;
}

.notion-collection-row-property .notion-property {
  justify-content: left !important;
}

.notion-collection-column-title {
  display: none !important;
}

.notion-collection-row-property .notion-property {
  display: flex;
  justify-content: center;
}

.notion-collection-row-value {
  padding: 0;
}

.notion-page-cover {
  max-width: 1080px;
  border-radius: 12px;
  z-index: 1;
  /*box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.08);*/
}

@media only screen and (max-width: 1200px) {
  .notion-page-cover {
    border-radius: 0;
  }
}

.notion-block-ab9a258d6cf444f3bb40dc2600feae91 .notion-page-link {
  justify-content: center;
  padding: 2em;
}

.notion-code {
  background: rgba(249, 250, 251, 1);
  border: 1px solid rgba(229, 231, 235, 1);
  border-radius: 0.375rem;
}

.notion-link {
  position: relative;
  transition: unset;
  opacity: 1;
}

.notion-link:hover {
  border-width: 3px;
  border-image: linear-gradient(90.68deg, #3b82f6 0.26%, #4b22bd 102.37%);
  border-image-slice: 1;
}

.notion-red_background,
.notion-pink_background,
.notion-blue_background,
.notion-purple_background,
.notion-teal_background,
.notion-yellow_background,
.notion-orange_background,
.notion-brown_background,
.notion-gray_background {
  padding: 0 0.5rem;
  margin: 0 -0.5rem 0 -0.25rem;
  border-radius: 0.5rem;
  border-bottom-left-radius: 0.125rem;
  box-decoration-break: clone;
  background-color: none;

  /* light yellow */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    #fef9c3 10.5%,
    #fef9c3 85.29%,
    var(--bg-color)
  );
}

.notion-purple_background,
.notion-pink_background {
  /* light pink */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    #f5b8d1 10.5%,
    #f9bcd3 85.29%,
    var(--bg-color)
  );
}

.notion-blue_background,
.notion-gray_background {
  /* light blue */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    hsl(0 0% 97.3%) 10.5%,
    hsl(0 0% 90.9%) 85.29%,
    var(--bg-color)
  );
}

.notion-red_background,
.notion-orange_background {
  /* light red */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    #f5c4ff 10.5%,
    #e7a8fc 85.29%,
    var(--bg-color)
  );
}

.notion-teal_background {
  /* light green */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    #d4eabc 10.5%,
    #d2eabc 85.29%,
    var(--bg-color)
  );
}

.notion-brown_background {
  /* dark blue */
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    #96b8ec 10.5%,
    #a6c3f0 85.29%,
    var(--bg-color)
  );
}

.dark-mode .notion-red_background,
.dark-mode .notion-pink_background,
.dark-mode .notion-blue_background,
.dark-mode .notion-purple_background,
.dark-mode .notion-teal_background,
.dark-mode .notion-yellow_background,
.dark-mode .notion-orange_background,
.dark-mode .notion-brown_background,
.dark-mode .notion-gray_background {
  padding: 0;
  margin: 0;
  border-radius: 0;
  background-image: linear-gradient(
    119deg,
    var(--bg-color),
    hsl(0 0% 15.8%) 10.5%,
    hsl(0 0% 10.8%) 85.29%,
    var(--bg-color)
  );
}

.notion-page-link:hover {
  background: linear-gradient(
    119deg,
    var(--bg-color),
    #f3f4f6,
    #e5e7eb,
    var(--bg-color)
  );
}

.dark-mode .notion-page-link:hover {
  background: linear-gradient(
    119deg,
    var(--bg-color),
    hsl(0 0% 20.8%) 10.5%,
    hsl(0 0% 22.8%) 10.5%,
    var(--bg-color)
  );
}

.notion-block-f382a57807bc40779860eb079d0144f2 .lazy-image-wrapper {
  border-radius: 16px;
}

/* if you don't want rounded page images, remove this */
.notion-page-icon-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: left;
}

.notion-page-icon-wrapper img.notion-page-icon {
  background: linear-gradient(to right, #3b82f6, #301480) border-box;
  z-index: 1;
  border: 4px solid transparent;
  border-radius: 50%;
  width: 100px;
  height: 100px;
}

.notion-header {
  overflow: visible;
  background: transparent;
  top: 0;
  left: 0;
  position: absolute;
  top: auto;
}

.dark-mode .notion-header {
  background: transparent;
  /*box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
  backdrop-filter: saturate(180%) blur(8px);*/
}

.dark-mode .nav-header {
  backdrop-filter: blur(8px);
}

.notion-bookmark:hover {
  border-image: linear-gradient(90.68deg, #ffda44 0.26%, #3b82f6 102.37%);
  border-image-slice: 1;
}

.notion-gallery-grid {
  flex-direction: column;
  display: flex;
}

.notion-aside-table-of-contents {
  width: 200px;
}

.notion-page-scroller {
  padding-top: 80px;
}

.styles_footer__RBpyk {
  overflow-x: visible !important;
  overflow-y: hidden !important;
  bottom: 32px;
  position: fixed;
  justify-content: center !important;
  top: auto;
  max-width: 800px !important;
  height: 64px;
  background-color: white;
  border-radius: 20px;
  box-shadow: 0 30px 60px rgba(0, 0, 0, 0.12);
  border: 1px solid hsl(0 0% 93.0%);
  padding: 8px 16px;
  z-index: 10;
}

.dark-mode .styles_footer__RBpyk {
  backdrop-filter: blur(8px);
  background-color: #111;
  box-shadow: 0 30px 60px rgba(255, 255, 255, 0.05);
  border: 1px solid hsl(0 0% 15.8%);
}

.styles_toggleDarkMode__1icXg {
  transition: all .3s ease-in-out !important;
  border-radius: 12px;
  color: hsl(0 0% 43.5%);
  border: 1px solid hsl(0 0% 93.0%);
  background-image: linear-gradient( 45deg, hsl(0 0% 97.3%), hsl(0 0% 90.9%), hsl(0 0% 97.3%), hsl(0 0% 90.9%) );
}

.styles_toggleDarkMode__1icXg:hover { 
  color: hsl(0 0% 43.5%) !important;
  transform: scale(1.2);
}

.dark-mode .styles_toggleDarkMode__1icXg {
  transition: all .3s ease-in-out !important;
  background-color: #111;
  border-radius: 12px;
  border: 1px solid hsl(0 0% 15.8%);
  background-image: linear-gradient( 45deg, hsl(0 0% 11.0%), hsl(0 0% 13.6%))
}

@media only screen and (max-width: 920px) {
    .styles_footer__RBpyk {
      flex-direction: row !important;
      justify-content: space-between !important;
      align-items: center !important;
      overflow-x: auto !important;
      overflow-y: hidden !important;
      width: 93% !important;
      padding: 8px 16px !important;
  }
  .notion-page-no-cover {
    margin-top: 0px !important;
  }
  .notion-title {
    margin-bottom: 0px !important;
  }
  .styles_footer__RBpyk > div {
    margin-top: 0px !important;
  }
}

.styles_linkedin__bgwDi {
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 40px;
  transition: all .3s ease-in-out !important;
  border-radius: 12px;
  border: 1px solid hsl(0 0% 93.0%);
  padding: 12px 12px;
  color: hsl(0 0% 43.5%);
  background-image: linear-gradient( 45deg, hsl(0 0% 97.3%), hsl(0 0% 90.9%), hsl(0 0% 97.3%), hsl(0 0% 90.9%) );
}

.dark-mode .styles_linkedin__bgwDi {
  transition: all .3s ease-in-out !important;
  background-color: #111;
  border-radius: 12px;
  border: 1px solid hsl(0 0% 15.8%);
  background-image: linear-gradient( 45deg, hsl(0 0% 11.0%), hsl(0 0% 13.6%))
}

.styles_linkedin__bgwDi:hover {
  transform: scale(1.2);
  color: hsl(0 0% 43.5%) !important;
}

.vertical-bar {
  margin: 0px 0px;
  margin-right: 40px;
  border: 0px;
  width: 1px;
  height: 48px;
  background: hsl(0 0% 90.0%);
  flex-shrink: 0;
  box-sizing: border-box;
}

.dark-mode .vertical-bar {
  background: hsl(0 0% 15.8%);
}

.notion-page-has-image-icon {
  padding-top: 112px !important;
}

.breadcrumbs {
  overflow: hidden;
}

